attempted to fix popup bug (not covering entire screen on mobile)

--- a/client/styles.css
+++ b/client/styles.css
@@ -476,6 +476,7 @@ div.full-width {
 	left: 0;
 	width: 100%;
 	height: 100%;
+	height: 100vh;
 	background: rgba(0,0,0,.90);
 	z-index: 1;
 	display: table;
